# ImageAnalystRKNN

./: .flake8  .gitmodules  README.md  pyproject.toml
src/image_analyst/rknn/: models.py
